public/nav.css
.nav {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  height: 4rem;
  display: flex;
  align-items: center;
  background: #323232;
  color: white;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.flex-container {
  padding-left: 20px;
  display: flex;
  gap: 1rem;
}

.nav-button {
  background: none;
  border: none;
  cursor: pointer;
  color: inherit;
  transition: 0.3s;
  font-size: 1.2rem;
}

.nav-button:hover {
  color: #d1b3ff;
  letter-spacing: 3px;
}


.user-button,
.wishlist-button {
  background: none;
  border: none;
  cursor: pointer;
  color: inherit;
  transition: 0.3s;
}

.user-button:hover,
.wishlist-button:hover {
  color: #d1b3ff;
  letter-spacing: 3px;
}

.icon-group {
  margin-left: 84%;
}

.icon {
  height: 1.25rem;
  width: 1.25rem;
}

/* profile & wishlist hover text */

.tooltip-container {
  position: relative;
  display: inline-block;
}

.tooltip-text {
  visibility: hidden;
  width: 60px;
  background-color: #000;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  position: absolute;
  z-index: 1;
  bottom: -125%;
  left: 50%;
  margin-left: -30px;
  transition: visibility 0.3s, opacity 0.3s;
  opacity: 0;
}

.tooltip-container:hover .tooltip-text {
  visibility: visible;
  opacity: 1;
}

